plugins {
    id 'java'
}

allprojects {
    group = 'kernel'
    version = '1.0.0'

    repositories {
        mavenCentral()
    }
}


subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}
